Fix dark mode. (#25)

--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -1,3 +1,7 @@
+.notes .newNote {
+  display: flex;
+  flex-direction: column;
+}
 .notes textarea {
   flex: 1;
   padding: 1rem;
